--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "school_backend",
   "version": "1.0.0",
-  "type": "module",
+  "type":"commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.0.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mssql": "^12.1.0",
+    "express-form-data": "^3.0.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.11"
-  },
-  "devDependencies": {
-    "prisma": "^7.0.1"
   }
 }
