Section & User Model Crud Complete

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "school_backend",
   "version": "1.0.0",
-  "type":"commonjs",
+  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
